--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "The Unlicense",
   "dependencies": {
     "jquery": "^3.7.1",
+    "js-yaml": "^4.1.0",
     "xterm": "^5.3.0"
   }
 }
