Add orange, some new content

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tgl",
   "version": "1.0.0",
-  "description": "The Great Library",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
